# dot_files

./: CMakeLists.txt  README  README.md  TODO  all.sh  init.sh  install_java.sh  netspeed  speed
bash/: bash_profile  bashrc  bashrc_yinong  setup.sh
bazel/: bazel-complete.bash  bazelrc  setup.sh
btt/: bttconfig
git/: gitconfig  setup.sh
jetbrains/: setup.sh
onetime/: disable_fucking_mouse_accel.sh  git.sh  grub.sh  kill_the_fucking_mouse_accel.sh  remapmenu.sh
tmux/: install-tmux.sh  setup.sh  tmux.conf  tmux.mouse_new.conf  tmux.mouse_old.conf
tools/: kill_the_fucking_mouse_accel.sh  mount_sshfs.sh  setup.bash
vim/: clang-format  setup.sh  vimrc
xinput/: xinputrc_yinong
yapf/: style.yapf
